# CDemo

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  doxyfile  main.c
include/: libdemo.h
src/: libdemo.c
txt/: First steps.md  README.md
